--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -22,5 +22,5 @@ jobs:
     - name: 'Deploy Azure Web App'
       uses: azure/webapps-deploy@v1
       with: 
-        app-name: livedemoapp
+        app-name: pocketcal
         publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
